<resources>

    <string name="app_name">RandomRei</string>
    <string name="action_folderpicker">Pick</string>
    <string name="action_favorite">Add to favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_history">History</string>
    <string name="nofolder">No folder is chosen</string>
    <string name="nohistory">No history for this day</string>
    <string name="nofavorites">No favorites</string>
    <string name="about">Created by DevXorNet.</string>

</resources>
