<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/history"
        android:title="@string/title_activity_history"
        android:icon="@drawable/icons8_calendar_36"
        app:showAsAction="always" />

    <item
        android:id="@+id/myfolderpicker"
        android:title="@string/action_folderpicker"
        android:icon="@drawable/icons8_open_36"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite"
        android:title="@string/action_favorite"
        android:icon="@drawable/ic_favorite_border_white_36dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_loadnew"
        android:title="Load New"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>